[package]
name = "benedictine"
version = "0.1.0"
authors = ["Kosuke Kusano <cocuh.kk@gmail.com>"]

[dependencies]
log = "*"
env_logger = "0.3"

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
default-features = false
features = ["python3-sys"]

[lib]
name = "benedictine"
crate-type=["dylib", "rlib"]
